# nwsl-data-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cloud-run-service.yaml  cloudbuild.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_platform.py
analytics/: README.md
analytics/expected_goals/: calculator.py
analytics/replacement_value/: estimator.py
analytics/shot_quality/: profiler.py
docker/: start.sh
docs/: claude-desktop-config.md  fbref-api-documentation.md  tool-and-prompt-ideas.md
scripts/: debug_fbref_api.py  ingest_data.py  ingest_fbref_data.py  test_fbref_api.py
scripts/deployment/: deploy.sh  deploy_nwsl_data.py  deploy_via_bq.py  deploy_via_gcloud.py  upload_nwsl_to_bigquery.py
scripts/ingestion/: analyze_player_excel.py  check_asa_methods.py  collect_match_level_data.py  collect_team_match_stats.py  create_team_analytics.py  debug_fbref_leagues.py  fbref_advanced_stats.py  fbref_api_comprehensive.py  fetch_fbref_player_data.py  ingest_asa_player_data.py  ingest_basic_nwsl_data.py  ingest_excel_player_stats.py  ingest_nwsl_player_stats.py  ingest_player_data_via_cloud.py  ingest_soccerdata_nwsl.py  process_all_player_data.py  test_fbref_endpoints.py  test_fbref_player_data.py  test_itscalledsoccer.py  test_nwsl_player_data.py  test_soccerdata_nwsl.py  upload_player_excel_simple.py
scripts/maintenance/: generate_fbr_api_key.py
src/nwsl_analytics/config/: settings.py
src/nwsl_analytics/mcp/: analytics_server.py  http_server.py  http_server_v2.py  server.py
(+1 files in other folders)
