[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwsl-analytics"
version = "0.1.0"
description = "Professional NWSL soccer analytics platform"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
nwsl-ingest = "nwsl_analytics.cli:ingest_command"
nwsl-server = "nwsl_analytics.cli:server_command"
nwsl-analyze = "nwsl_analytics.cli:analyze_command"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/nwsl_analytics --cov-report=html --cov-report=term"
